# DIN

./: .gitignore
DistributedTracker/: README.md
DistributedTracker/scripts/: analyzer.sh  run.sh
DistributedTracker/src/: CMakeLists.txt  main.cpp
DistributedTracker/src/IMBS/: README.txt  imbs.cpp  imbs.hpp
DistributedTracker/src/KinectDataAcquisition/: Kinect.h  KinectReader.cpp  KinectReader.h  KinectWriter.cpp  KinectWriter.h  MyFreenectDevice.cpp  MyFreenectDevice.h
DistributedTracker/src/Utils/: ObservationManager.cpp  ObservationManager.h
DistributedTracker/src/cmake/modules/: FindFreenect.cmake  FindPTracking.cmake
ptracking/: README.md
ptracking/config/: agent.cfg  homography.cfg  learner.cfg  parameters.cfg  pviewer.cfg  rosbridge.cfg
ptracking/config/Edinburgh-Atrium/: homography.cfg  parameters.cfg
ptracking/config/Kinect/: homography.cfg  parameters.cfg
ptracking/config/PETS-2009/: homography.cfg  parameters.cfg
ptracking/obs/: Clip-1.xml  Clip-2.xml  OwnDataset-1.xml  OwnDataset-2.xml  OwnDataset-3.xml  OwnDataset-4.xml
ptracking/src/: CMakeLists.txt  Doxyfile
ptracking/src/Core/Clusterizer/: Clusterizer.h
ptracking/src/Core/Clusterizer/KClusterizer/: KClusterizer.cpp  KClusterizer.h
ptracking/src/Core/Clusterizer/QTClusterizer/: QTClusterizer.cpp  QTClusterizer.h
ptracking/src/Core/Filters/: ObjectParticleFilter.cpp  ObjectParticleFilter.h  ObjectParticleFilterMultiAgent.cpp  ObjectParticleFilterMultiAgent.h  ObjectSensorReading.cpp  ObjectSensorReading.h  ObjectSensorReadingMultiAgent.cpp  ObjectSensorReadingMultiAgent.h
ptracking/src/Core/IRLearner/: IRLearner.cpp  IRLearner.h
ptracking/src/Core/Processors/: MultiAgentProcessor.cpp  Processor.cpp  Processor.h
ptracking/src/Core/SensorModels/: BasicSensorModel.cpp  BasicSensorModel.h
ptracking/src/Manfield/: sensormodel.h
ptracking/src/Manfield/filters/: particlefilter.h
ptracking/src/Manfield/utils/: debugutils.h
ptracking/src/PLearner/: PLearner.cpp  PLearner.h  main.cpp
ptracking/src/PTracker/: PTracker.cpp  PTracker.h  main.cpp
ptracking/src/PViewer/: PViewer.cpp  PViewer.h  main.cpp
ptracking/src/PVisualizer/: PVisualizer.cpp  PVisualizer.h  main.cpp
ptracking/src/Utils/: AgentPacket.h  UdpSocket.h  Utils.h
